Ajustes margin/padding generales
Se ajustaron padding y margin sobre todo el footer y el background color del mismo.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </header>
 
     <main>
-        <img src="/Imágenes/ANYMA-THE-END-OF-GENESYS-PACKSHOT-_05_3840+x+2160.jpg" width="100%" alt="Wallpaper ANYMA">
+        <img id="Wallpaper" src="/Imágenes/ANYMA-THE-END-OF-GENESYS-PACKSHOT-_05_3840+x+2160.jpg" width="100%" alt="Wallpaper ANYMA">
         <div id="div1">
             <p id="texto1"> Anyma es un proyecto innovador que trasciende los límites de la electrónica al integrar
                 música,
@@ -81,7 +81,7 @@
                 finales de 2024. Combinó visuales inmersivos y robótica en escena.</p>
         </div>
 
-        <div>
+        <div id="video_anyma">
             <video src="/Videos/Anyma, Massano, Nathan Nicholson - Angel In The Dark [Live at Sphere Las Vegas].mp4"
                 autoplay muted width="100%" loop> </video>
         </div>
