--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         </div>
         <nav id="nav">
 
-            <a href="#short" style="color: white; text-decoration: none;">The end of genesys</a>
-            <a href="#texto5" style="color: white; text-decoration: none;">Shows</a>
+            <a class="genesys" href="#short" style="color: white; text-decoration: none;">The end of genesys</a>
+            <a class="shows" href="#texto5" style="color: white; text-decoration: none;">Shows</a>
         </nav>
 
     </header>
