Cambio de nombre en carpeta

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <div id="logo">
-            <img src="/Imágenes/anyma logo.webp" width="10%" alt="logo">
+            <img src="/img/anyma logo.webp" width="10%" alt="logo">
         </div>
 
         </div>
@@ -30,7 +30,7 @@
     </header>
 
     <main>
-        <img id="Wallpaper" src="/Imágenes/ANYMA-THE-END-OF-GENESYS-PACKSHOT-_05_3840+x+2160.jpg" width="100%" alt="Wallpaper ANYMA">
+        <img id="Wallpaper" src="/img/ANYMA-THE-END-OF-GENESYS-PACKSHOT-_05_3840+x+2160.jpg" width="100%" alt="Wallpaper ANYMA">
         <div id="div1">
             <p id="texto1"> Anyma es un proyecto innovador que trasciende los límites de la electrónica al integrar
                 música,
@@ -57,7 +57,7 @@
         </div>
 
         <div id="div3">
-            <img src="/Imágenes/Anyma+Homepage.jpg" width="50%" alt="Anyma">
+            <img src="/img/Anyma+Homepage.jpg" width="50%" alt="Anyma">
         </div>
 
         <div id="short">
@@ -90,21 +90,21 @@
 
 
                 <div>
-                    <a id="rrss" href="https://open.spotify.com/intl-es/artist/4iBwchw0U0GZv5RfVYSMxN"><img
-                            src="/Imágenes/2559779_media_network_social_spotify_icon.png" alt="spotify" width="25px"
+                    <a class="rrss" href="https://open.spotify.com/intl-es/artist/4iBwchw0U0GZv5RfVYSMxN"><img
+                            src="/img/2559779_media_network_social_spotify_icon.png" alt="spotify" width="25px"
                             height="25px">
                     </a>
-                    <a id="rrss" href="https://www.youtube.com/channel/UCHXy48aYSYeRaBuMOedwxAQ"><img
-                            src="/Imágenes/5279120_play_video_youtube_youtuble logo_icon.png" alt="YouTube"
+                    <a class="rrss" href="https://www.youtube.com/channel/UCHXy48aYSYeRaBuMOedwxAQ"><img
+                            src="/img/5279120_play_video_youtube_youtuble logo_icon.png" alt="YouTube"
                             width="25px" height="25px"></a>
-                    <a id="rrss" href="https://music.apple.com/us/artist/anyma/1505813449?l=es-MX"><img
-                            src="/Imágenes/1314139_app_apple_display_itunes_music_icon.png" alt="Apple music"
+                    <a class="rrss" href="https://music.apple.com/us/artist/anyma/1505813449?l=es-MX"><img
+                            src="/img/1314139_app_apple_display_itunes_music_icon.png" alt="Apple music"
                             width="25px" height="25px"></a>
-                    <a id="rrss" href="https://www.instagram.com/anyma/"><img
-                            src="/Imágenes/5282544_camera_instagram_social media_social network_instagram logo_icon.png"
+                    <a class="rrss" href="https://www.instagram.com/anyma/"><img
+                            src="/img/5282544_camera_instagram_social media_social network_instagram logo_icon.png"
                             alt="instagram" width="25px" height="25px"></a>
-                    <a id="rrss" href="https://www.tiktok.com/@anyma?lang=es"><img
-                            src="/Imágenes/5367362_media_network_social_social media_tiktok_icon.png" alt="tiktok"
+                    <a class="rrss" href="https://www.tiktok.com/@anyma?lang=es"><img
+                            src="/img/5367362_media_network_social_social media_tiktok_icon.png" alt="tiktok"
                             width="25px" height="25px"></a>
                 </div>
             </div>
