--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <link rel="shortcut icon" href="/favicons/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="/favicons//apple-touch-icon.png" />
     <link rel="manifest" href="/favicons/site.webmanifest" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Hanken+Grotesk:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto+Slab:wght@100..900&family=Special+Gothic&display=swap"
+        rel="stylesheet">
 
 </head>
 
@@ -30,7 +35,8 @@
     </header>
 
     <main>
-        <img id="Wallpaper" src="/img/ANYMA-THE-END-OF-GENESYS-PACKSHOT-_05_3840+x+2160.jpg" width="100%" alt="Wallpaper ANYMA">
+        <img id="Wallpaper" src="/img/ANYMA-THE-END-OF-GENESYS-PACKSHOT-_05_3840+x+2160.jpg" width="100%"
+            alt="Wallpaper ANYMA">
         <div id="div1">
             <p id="texto1"> Anyma es un proyecto innovador que trasciende los límites de la electrónica al integrar
                 música,
@@ -95,11 +101,11 @@
                             height="25px">
                     </a>
                     <a class="rrss" href="https://www.youtube.com/channel/UCHXy48aYSYeRaBuMOedwxAQ"><img
-                            src="/img/5279120_play_video_youtube_youtuble logo_icon.png" alt="YouTube"
-                            width="25px" height="25px"></a>
+                            src="/img/5279120_play_video_youtube_youtuble logo_icon.png" alt="YouTube" width="25px"
+                            height="25px"></a>
                     <a class="rrss" href="https://music.apple.com/us/artist/anyma/1505813449?l=es-MX"><img
-                            src="/img/1314139_app_apple_display_itunes_music_icon.png" alt="Apple music"
-                            width="25px" height="25px"></a>
+                            src="/img/1314139_app_apple_display_itunes_music_icon.png" alt="Apple music" width="25px"
+                            height="25px"></a>
                     <a class="rrss" href="https://www.instagram.com/anyma/"><img
                             src="/img/5282544_camera_instagram_social media_social network_instagram logo_icon.png"
                             alt="instagram" width="25px" height="25px"></a>
