--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
             <a class="genesys" href="#short" style="color: white; text-decoration: none;">The end of genesys</a>
             <a class="shows" href="#texto5" style="color: white; text-decoration: none;">Shows</a>
+            <a class="suscribete" href="#formulario" style="color: white; text-decoration: none;">suscribete</a>
         </nav>
 
     </header>
@@ -90,6 +91,22 @@
         <div id="video_anyma">
             <video src="/Videos/Anyma, Massano, Nathan Nicholson - Angel In The Dark [Live at Sphere Las Vegas].mp4"
                 autoplay muted width="100%" loop> </video>
+        </div>
+
+        <div id="formulario">
+            <h2 id="suscribete">
+                suscribete
+            </h2>
+
+            <fieldset>
+                <legend id="legend" ><span for="">Datos personales</span></legend>
+                <label id="email" for="email">Tu email:</label>
+                <input id="email" type="mail" name="email" id="email" placeholder="Introduce tu email">
+                <p id="textoform">No te pierdas ninguna novedad sobre Anyma y sus shows o próximos lanzamientos. Los correos electrónicos serán enviados en nombre de Universal Music Group 2220 Colorado Avenue, Santa Monica, CA 90404 (310) 865-4000.</p>
+              <button class="button" type="submit"> <span>submit</span></button>
+
+            
+
         </div>
         <footer>
             <div id="footer">
