--- a/index.html
+++ b/index.html
@@ -99,13 +99,15 @@
             </h2>
 
             <fieldset>
-                <legend id="legend" ><span for="">Datos personales</span></legend>
+                <legend id="legend"><span for="">Datos personales</span></legend>
                 <label id="email" for="email">Tu email:</label>
                 <input id="email" type="mail" name="email" id="email" placeholder="Introduce tu email">
-                <p id="textoform">No te pierdas ninguna novedad sobre Anyma y sus shows o próximos lanzamientos. Los correos electrónicos serán enviados en nombre de Universal Music Group 2220 Colorado Avenue, Santa Monica, CA 90404 (310) 865-4000.</p>
-              <button class="button" type="submit"> <span>submit</span></button>
+                <p id="textoform">No te pierdas ninguna novedad sobre Anyma y sus shows o próximos lanzamientos. Los
+                    correos electrónicos serán enviados en nombre de Universal Music Group 2220 Colorado Avenue, Santa
+                    Monica, CA 90404 (310) 865-4000.</p>
+                <button class="button" type="submit"> <span>submit</span></button>
 
-            
+
 
         </div>
         <footer>
